# ha-bvk

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  hacs.json  main.py  pyproject.toml  requirements.txt  test_api.py  test_token_extraction.py
.features/: api.md  ha.md  scraper.md
.github/workflows/: auto_fix_lint.yml  nightly.yml  release.yml  release_docker.yml  release_ha.yml  sanity-autofix.yml  sanity.yml  tests.yml
_backup/: .gitignore  AGENTS.md  README.md  hacs.json
_backup/custom_components/: __init__.py
_backup/custom_components/bvk/: __init__.py  api.py  config_flow.py  const.py  manifest.json  sensor.py  token_utils.py
_backup/test/: .env.example  __init__.py  test_api.py
_backup/test/resources/: login_page.html
api/: Dockerfile  api.py  app.js  index.js  package-lock.json  package.json
api/public/: app.css  app.js  index.html
api/tests/: api.test.js  test_api_endpoints.py
custom_components/bvk/: README.md  __init__.py  api.py  config_flow.py  const.py  manifest.json  sensor.py  token_utils.py
custom_components/bvk_water/: config_flow.py  manifest.json  strings.json
scraper/: Dockerfile  clean_history.py  debug_ocr.py  download_meter_image.py  main.py  ocr.py  requirements.txt  reset_state.py  snapshot_workflow.py  tune_ocr.py
scraper/ocr/: __init__.py  api.py  base.py  debug_dump.py  factory.py
scraper/tests/: test.sh  test_ocr_resources.py
test/: README.md  run_tests.py  test_api.py  test_consumption.py  test_login_form.py  test_token_extraction.py
test/resources/: main_info_page.html
(+8 files in other folders)
